Fix country-view hor-selectors alignment

--- a/front-end/css/style.css
+++ b/front-end/css/style.css
@@ -223,5 +223,6 @@ section .title-bg {
 
     .country-view .hor-selectors {
         flex-direction: column;
+        align-items: center;
     }
 }
